New files added via upload

--- a/djangoproject/myapp1/templates/index.html
+++ b/djangoproject/myapp1/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>first heading</h1><br>
-    <a href={% url 'home' %}>go to home page</a>
+    <a href={% url 'home' %}>Go to home page</a>
 </body>
 </html>
