--- a/djangoproject/myapp1/templates/post_form.html
+++ b/djangoproject/myapp1/templates/post_form.html
@@ -1,4 +1,4 @@
-<h1>{% if object %}Edit post{% else %}create New Post{% endif %}</h1>
+<h1>{% if object %}Edit post{% else %}Create New Post{% endif %}</h1>
 
 <form method = "post">
     {% csrf_token %}
